fix text overflow on attachment filesize

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -3661,14 +3661,13 @@ footer {
     }
 
       .attachment-name {
-        @extend .u-textTruncate;
         margin-right: 5px;
       }
 
       .attachment-size {
-        @extend .u-textTruncate;
         white-space: nowrap;
-        min-width: 40px;
+        float: right;
+        margin-right: 10px;
       }
 
       .attachment-delete {
